Update website content and FAQ sections

--- a/index.html
+++ b/index.html
@@ -2801,10 +2801,11 @@
                 <div class="pb-4 pt-0">
                   Im Gegensatz zu herkömmlichen Messgeräten, die nur einzelne
                   Messungen vornehmen, bietet das BPER System eine
-                  kontinuierliche Überwachung über den ganzen Tag. Dies zeigt
-                  Muster und Schwankungen, die bei einzelnen Messungen übersehen
-                  würden, und gibt Ihnen und Ihrem Gesundheitsdienstleister ein
-                  vollständigeres Bild Ihrer Herz-Kreislauf-Gesundheit.
+                  intermittierende kontinuierliche Überwachung über den Tag.
+                  Dies zeigt Muster und Schwankungen, die bei einzelnen
+                  Messungen übersehen würden, und gibt Ihnen und Ihrem
+                  Gesundheitsdienstleister ein vollständigeres Bild Ihrer
+                  Herz-Kreislauf-Gesundheit.
                 </div>
               </div>
             </div>
@@ -2846,7 +2847,9 @@
                   entwickelt. Das leichte Design und die weichen Materialien
                   gewährleisten, dass Sie es bei Ihren täglichen Aktivitäten
                   bequem tragen können. Viele Benutzer berichten, dass sie nach
-                  kurzer Zeit vergessen, dass sie es tragen.
+                  kurzer Zeit vergessen, dass sie es tragen. wie soll das gehen
+                  wenn der schlauch und das gerät in der hand gehalten werden
+                  muss
                 </div>
               </div>
             </div>
@@ -2969,10 +2972,10 @@
                 <div class="pb-4 pt-0">
                   Das BPER System verbindet sich drahtlos mit unserer mobilen
                   App (verfügbar für iOS und Android), die Ihre Echtzeit-Daten,
-                  historische Trends und personalisierte Einblicke anzeigt. Die
-                  App ermöglicht es Ihnen auch, Berichte direkt mit Ihrem
-                  Gesundheitsdienstleister zu teilen und individuelle Warnungen
-                  einzurichten.
+                  historische Trends und personalisierte Einblicke anzeigt wenn
+                  Sie es einstellen. Die App ermöglicht es Ihnen auch, Berichte
+                  direkt mit Ihrem Gesundheitsdienstleister zu teilen und
+                  individuelle Warnungen einzurichten.
                 </div>
               </div>
             </div>
@@ -3007,8 +3010,8 @@
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
-                  Der Akku des BPER Systems hält bei aktivierter
-                  kontinuierlicher Überwachung etwa 72 Stunden mit einer
+                  Der Akku des BPER Systems hält bei intermittierender
+                  kontinuierlicher Überwachung etwa 72 Messungen mit einer
                   einzigen Ladung. Eine vollständige Aufladung dauert etwa 90
                   Minuten, und das Gerät kann in nur 30 Minuten auf 50%
                   schnellgeladen werden.
@@ -3090,10 +3093,11 @@
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
-                  Das BPER System kommt mit einer 2-jährigen Herstellergarantie,
-                  die alle Material- und Verarbeitungsfehler abdeckt. Wir bieten
-                  auch ein erweitertes Garantieprogramm und
-                  Premium-Support-Pakete für zusätzliche Sicherheit.
+                  Sie erhalten auf das BPER-System eine 2-jährige
+                  Herstellergarantie – inklusive Schutz bei Material- und
+                  Verarbeitungsfehlern. Auf Wunsch können Sie zusätzlichen
+                  Schutz durch unsere erweiterten Garantie- und
+                  Premium-Support-Pakete buchen.
                 </div>
               </div>
             </div>
