Refine hero section CSS and update product description text

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -627,7 +627,7 @@
                     />
                   </svg>
                   <span
-                    >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
                     APP</span
                   >
                 </li>
@@ -657,7 +657,7 @@
                       clip-rule="evenodd"
                     />
                   </svg>
-                  <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+                  <span>0 Risiko-90 Tage Geld zurück Garantie</span>
                 </li>
               </ul>
               <div class="text-gray-500 mb-6 text-center text-sm">
@@ -709,9 +709,9 @@
                   ></path>
                 </svg>
                 <span
-                  >1 Jahr Subskription fuer Leistungsfaehigkeit Bewertung durch
+                  >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
                   APP</span
-                >
+                  >
               </li>
               <li class="flex items-start">
                 <svg
@@ -745,11 +745,11 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+                <span>0 Risiko-90 Tage Geld zurück Garantie</span>
               </li>
             </ul>
             <div class="mb-4 text-sm text-gray-500 font-semibold">
-              erhaeltlich online ab August 2025
+              erhältlich online ab August 2025
             </div>
             <p class="text-sm text-gray-600 mb-4">
               Dieses Angebot ist für alle die den EarlyBird Rabatt verpasst
