--- a/index.html
+++ b/index.html
@@ -1845,7 +1845,6 @@
               <path d="M9 18l6-6-6-6"></path>
             </svg>
           </div>
-
           <!-- Pricing grid - on desktop uses grid, on mobile becomes swipeable -->
           <div
             class="pricing-cards-container grid grid-cols-1 md:grid-cols-3 gap-8 md:mx-auto"
@@ -1880,7 +1879,7 @@
                     ></path>
                   </svg>
                   <span
-                    >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
                     APP</span
                   >
                 </li>
@@ -1916,7 +1915,7 @@
                       d="M5 13l4 4L19 7"
                     ></path>
                   </svg>
-                  <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+                  <span>0 Risiko-90 Tage Geld zurück Garantie</span>
                 </li>
               </ul>
               <div class="mb-4 text-sm text-gray-500 font-semibold">
@@ -1948,12 +1947,8 @@
             <div
               class="pricing-card opacity-60 bg-white rounded-xl p-6 border-4 border-gray-300 flex flex-col h-full relative overflow-hidden shadow-lg"
             >
-              <!-- Removed Aktuell badge -->
               <h3 class="text-xl font-bold mb-2">Einführungs-Angebot</h3>
-              <!-- Title updated -->
               <div class="text-3xl font-bold mb-4">259 €</div>
-              <!-- Price updated -->
-              <!-- Removed quantity limit -->
               <ul class="mb-6 flex-1 space-y-2 text-sm">
                 <li class="flex items-start">
                   <svg
@@ -1970,9 +1965,8 @@
                       d="M5 13l4 4L19 7"
                     ></path>
                   </svg>
-                  <!-- Feature text updated -->
                   <span
-                    >1 Jahr Subskription fuer Leistungsfaehigkeit Bewertung
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung
                     durch APP</span
                   >
                 </li>
@@ -1991,7 +1985,6 @@
                       d="M5 13l4 4L19 7"
                     ></path>
                   </svg>
-                  <!-- Feature text updated -->
                   <span>1 Jahr kostenlose Online-Datenspeicherung</span>
                 </li>
                 <li class="flex items-start">
@@ -2009,17 +2002,13 @@
                       d="M5 13l4 4L19 7"
                     ></path>
                   </svg>
-                  <!-- Feature text updated -->
-                  <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+                  <span>0 Risiko-90 Tage Geld zurück Garantie</span>
                 </li>
-                <!-- Removed other list items -->
               </ul>
-              <!-- Added availability -->
               <div class="mb-4 text-sm text-gray-500 font-semibold">
-                erhaeltlich online ab August 2025
+                erhältlich online ab August 2025
               </div>
               <p class="text-sm text-gray-600 mb-4">
-                <!-- Description updated -->
                 Dieses Angebot ist für alle die den EarlyBird Rabatt verpasst
                 haben oder sich nicht qualifiziert haben.
               </p>
@@ -2033,7 +2022,6 @@
                 href="javascript:void(0)"
                 class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
               >
-                <!-- Button text kept as Jetzt reservieren -->
                 Jetzt reservieren
               </a>
             </div>
@@ -2043,10 +2031,7 @@
               class="pricing-card bg-gray-50 rounded-xl p-6 border-4 border-gray-200 flex flex-col h-full opacity-60 shadow-lg"
             >
               <h3 class="text-xl font-bold mb-2">Offizieller Preis</h3>
-              <!-- Title updated -->
               <div class="text-3xl font-bold mb-4">359 €</div>
-              <!-- Price updated -->
-              <!-- Removed Regulaere UVP-Preis text -->
               <ul class="mb-6 flex-1 space-y-2 text-sm">
                 <li class="flex items-start">
                   <svg
@@ -2063,9 +2048,8 @@
                       d="M5 13l4 4L19 7"
                     ></path>
                   </svg>
-                  <!-- Feature text updated -->
                   <span
-                    >1 Jahr Subskription fuer Leistungsfaehigkeit Bewertung
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung
                     durch APP</span
                   >
                 </li>
@@ -2215,13 +2199,11 @@
                   padding: 0 20px;
                 "
               >
-                <h3 class="bento-item-title">
-                  Kontinuierliche Präzisionsmessung
-                </h3>
+                <h3 class="bento-item-title">Beat-to-Beat-Blutdruckmessung</h3>
                 <p class="bento-item-description">
-                  Im Gegensatz dazu arbeitet ein kontinuierliches
-                  Blutdruckmessgerät durchgehend, sodass es mehrere Datenpunkte
-                  pro Sekunde aufzeichnen kann.
+                  Im Gegensatz zu herkömmlichen Messgeräten erfasst BPER auch
+                  die Werte zwischen den Herzschlägen. Damit kann die Druckwelle
+                  erfasst und analysiert werden.
                 </p>
               </div>
               <div
@@ -2308,15 +2290,15 @@
               >
                 <h3 class="bento-item-title">Intelligente Datenanalyse</h3>
                 <p class="bento-item-description">
-                  Nutzung von KI zur Interpretation Ihrer Daten und
-                  Bereitstellung personalisierter Gesundheitseinblicke.
+                  Nutzung von erprobten Algorithmen zur Interpretation Ihrer
+                  Daten und Bereitstellung personalisierter
+                  Gesundheitseinblicke.
                 </p>
               </div>
               <div
                 class="bento-tags"
                 style="position: absolute; bottom: 20px; left: 20px"
               >
-                <span class="bento-tag">#ki</span>
                 <span class="bento-tag">#analyse</span>
               </div>
             </div>
@@ -2417,9 +2399,10 @@
               >
                 <div class="flex-1">
                   <p class="text-sm text-gray-300 mb-4">
-                    "Als Ärztin empfehle ich meinen Patienten das BPER System.
-                    Die Daten sind präzise und die kontinuierliche Überwachung
-                    liefert wertvolle Einblicke für eine bessere Behandlung."
+                    "Die kontinuierliche Überwachung mit dem BPER System hat mir
+                    geholfen, meine Gesundheit besser zu verstehen. Die präzisen
+                    Daten und die übersichtliche App machen es mir leicht,
+                    meinen Blutdruck im Blick zu behalten."
                   </p>
                 </div>
                 <div class="flex items-center gap-3 mt-2">
@@ -2429,14 +2412,14 @@
                     <img
                       class="aspect-square h-full w-full"
                       src="https://i.pravatar.cc/150?img=5"
-                      alt="Dr. Sabine Weber"
+                      alt="Sabine Weber"
                     />
                   </div>
                   <div class="flex flex-col">
                     <h3 class="text-sm font-medium leading-none text-gray-100">
-                      Dr. Sabine Weber
+                      Sabine Weber
                     </h3>
-                    <p class="text-xs text-gray-400 mt-1">Kardiologin</p>
+                    <p class="text-xs text-gray-400 mt-1">BPER Nutzerin</p>
                   </div>
                 </div>
               </div>
@@ -2498,9 +2481,7 @@
                     <h3 class="text-sm font-medium leading-none text-gray-100">
                       Martina Schmidt
                     </h3>
-                    <p class="text-xs text-gray-400 mt-1">
-                      Nutzerin seit 6 Monaten
-                    </p>
+                    <p class="text-xs text-gray-400 mt-1">BPER Nutzerin</p>
                   </div>
                 </div>
               </div>
@@ -2801,55 +2782,14 @@
                 <div class="pb-4 pt-0">
                   Im Gegensatz zu herkömmlichen Messgeräten, die nur einzelne
                   Messungen vornehmen, bietet das BPER System eine
-                  intermittierende kontinuierliche Überwachung über den Tag.
-                  Dies zeigt Muster und Schwankungen, die bei einzelnen
+                  Beate-to-Beate Messung. Dies erlaubt die Erfassung der
+                  Blutdruckschwankung II. Ordnung, indem zu jedem Herzschlag
+                  Systole und Diastole bestimmt werden. Intermittenend
+                  angewendet erlaubt es eine Überwachung über den Tag. Dies
+                  zeigt Muster und Schwankungen, die bei bisher bekannte
                   Messungen übersehen würden, und gibt Ihnen und Ihrem
                   Gesundheitsdienstleister ein vollständigeres Bild Ihrer
                   Herz-Kreislauf-Gesundheit.
-                </div>
-              </div>
-            </div>
-
-            <!-- Accordion Item 2 -->
-            <div class="border-b">
-              <div class="flex">
-                <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
-                  data-accordion-toggle=""
-                >
-                  <span
-                    >Ist das BPER System den ganzen Tag über angenehm zu
-                    tragen?</span
-                  >
-                  <svg
-                    class="h-4 w-4 shrink-0 transition-transform duration-200"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M6 9l6 6 6-6"></path>
-                  </svg>
-                </button>
-              </div>
-              <div
-                class="overflow-hidden text-sm transition-all text-left"
-                data-accordion-content=""
-                style="display: none"
-              >
-                <div class="pb-4 pt-0">
-                  Ja, das BPER System wurde für ganztägigen Tragekomfort
-                  entwickelt. Das leichte Design und die weichen Materialien
-                  gewährleisten, dass Sie es bei Ihren täglichen Aktivitäten
-                  bequem tragen können. Viele Benutzer berichten, dass sie nach
-                  kurzer Zeit vergessen, dass sie es tragen. wie soll das gehen
-                  wenn der schlauch und das gerät in der hand gehalten werden
-                  muss
                 </div>
               </div>
             </div>
@@ -2972,7 +2912,7 @@
                 <div class="pb-4 pt-0">
                   Das BPER System verbindet sich drahtlos mit unserer mobilen
                   App (verfügbar für iOS und Android), die Ihre Echtzeit-Daten,
-                  historische Trends und personalisierte Einblicke anzeigt wenn
+                  historische Trends und personalisierte Einblicke anzeigt, wenn
                   Sie es einstellen. Die App ermöglicht es Ihnen auch, Berichte
                   direkt mit Ihrem Gesundheitsdienstleister zu teilen und
                   individuelle Warnungen einzurichten.
@@ -3010,11 +2950,9 @@
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
-                  Der Akku des BPER Systems hält bei intermittierender
-                  kontinuierlicher Überwachung etwa 72 Messungen mit einer
-                  einzigen Ladung. Eine vollständige Aufladung dauert etwa 90
-                  Minuten, und das Gerät kann in nur 30 Minuten auf 50%
-                  schnellgeladen werden.
+                  Ein vollständig geladener Akku erlaubt ca. 72 Messungen. Eine
+                  vollständige Aufladung dauert etwa 90 Minuten, und das Gerät
+                  kann in nur 30 Minuten auf 50% schnellgeladen werden.
                 </div>
               </div>
             </div>
