Fix footer links to point to .html files

--- a/index.html
+++ b/index.html
@@ -1966,8 +1966,8 @@
                     ></path>
                   </svg>
                   <span
-                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung
-                    durch APP</span
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
+                    APP</span
                   >
                 </li>
                 <li class="flex items-start">
@@ -2049,8 +2049,8 @@
                     ></path>
                   </svg>
                   <span
-                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung
-                    durch APP</span
+                    >1 Jahr Subscription für Leistungsfähigkeit Bewertung durch
+                    APP</span
                   >
                 </li>
                 <li class="flex items-start">
@@ -4126,19 +4126,19 @@
               </p>
               <div class="flex flex-wrap gap-4 justify-center">
                 <a
-                  href="/datenschutz"
+                  href="datenschutz.html"
                   class="text-sm text-gray-500 hover:text-blue-700 transition-colors duration-200 focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   Datenschutz
                 </a>
                 <a
-                  href="/impressum"
+                  href="impressum.html"
                   class="text-sm text-gray-500 hover:text-blue-700 transition-colors duration-200 focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   Impressum
                 </a>
                 <a
-                  href="/agb"
+                  href="agb.html"
                   class="text-sm text-gray-500 hover:text-blue-700 transition-colors duration-200 focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   AGB
