--- a/index.html
+++ b/index.html
@@ -4090,6 +4090,12 @@
                 >
                   AGB
                 </a>
+                <a
+                  href="widerrufsrecht.html"
+                  class="text-sm text-gray-500 hover:text-blue-700 transition-colors duration-200 focus:outline-none focus:text-blue-700 focus:underline"
+                >
+                  Widerrufsrecht
+                </a>
               </div>
             </div>
           </div>
