Add Google App section with Android app promotion
- Added new section promoting BPER Android app
- Horizontal flex layout with text content and app screenshots
- Updated text to focus on professional blood pressure measurement
- Added Google Play Store button with official logo
- Clean white background for image block with full height
- Removed AI references from content
- Added WechatIMG4693.jpg app screenshot image

--- a/index.html
+++ b/index.html
@@ -3882,6 +3882,139 @@
     <!-- Flowbite JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
+    <!-- Google App Section -->
+    <section class="bg-gray-100 py-20">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex flex-col lg:flex-row items-center gap-12">
+          <!-- Text Content -->
+          <div class="lg:w-1/2 space-y-6">
+            <h2 class="text-4xl font-bold text-gray-900 leading-tight">
+              Die BPER App - Jetzt auch für
+              <span class="text-blue-600">Android</span>
+            </h2>
+
+            <p class="text-xl text-gray-600 leading-relaxed">
+              Nutzen Sie die volle Funktionalität unserer professionellen
+              Blutdruckmessung jetzt auch unterwegs. Verfügbar im Google Play
+              Store.
+            </p>
+
+            <div class="space-y-4">
+              <div class="flex items-start gap-3">
+                <div
+                  class="w-6 h-6 bg-blue-100 rounded-full flex items-center justify-center flex-shrink-0 mt-1"
+                >
+                  <svg
+                    class="w-3 h-3 text-blue-600"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <h3 class="font-semibold text-gray-900">
+                    Präzise Messungen jederzeit
+                  </h3>
+                  <p class="text-gray-600">
+                    Führen Sie Blutdruckmessungen durch und erhalten Sie
+                    sofortige professionelle Auswertung
+                  </p>
+                </div>
+              </div>
+
+              <div class="flex items-start gap-3">
+                <div
+                  class="w-6 h-6 bg-blue-100 rounded-full flex items-center justify-center flex-shrink-0 mt-1"
+                >
+                  <svg
+                    class="w-3 h-3 text-blue-600"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <h3 class="font-semibold text-gray-900">
+                    Personalisierte Gesundheitsinsights
+                  </h3>
+                  <p class="text-gray-600">
+                    Erhalten Sie maßgeschneiderte Empfehlungen basierend auf
+                    Ihren Messwerten
+                  </p>
+                </div>
+              </div>
+
+              <div class="flex items-start gap-3">
+                <div
+                  class="w-6 h-6 bg-blue-100 rounded-full flex items-center justify-center flex-shrink-0 mt-1"
+                >
+                  <svg
+                    class="w-3 h-3 text-blue-600"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <h3 class="font-semibold text-gray-900">
+                    Sichere Datenspeicherung
+                  </h3>
+                  <p class="text-gray-600">
+                    Alle Ihre Gesundheitsdaten werden verschlüsselt und sicher
+                    gespeichert
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex flex-col sm:flex-row gap-4 pt-4">
+              <a
+                href="https://play.google.com/store/apps/details?id=de.redtel.rm1app&pcampaignid=web_share"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="inline-flex items-center justify-center px-8 py-3 bg-black text-white rounded-lg hover:bg-gray-800 transition-colors duration-200 shadow-lg"
+              >
+                <img
+                  src="images/Google_Play_2022_logo.svg.png"
+                  alt="Google Play Store"
+                  class="w-6 h-6 mr-3"
+                />
+                Google Play Store
+              </a>
+            </div>
+          </div>
+
+          <!-- Image Content -->
+          <div class="lg:w-1/2 h-full">
+            <div class="relative h-full">
+              <div class="bg-white p-8 shadow-2xl h-full flex items-center">
+                <img
+                  src="images/WechatIMG4693.jpg"
+                  alt="BPER App auf Android Smartphone"
+                  class="w-full h-full object-cover shadow-lg"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="bg-white border-t border-gray-200 shadow-sm">
       <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8">
