--- a/index.html
+++ b/index.html
@@ -1759,6 +1759,15 @@
           font-size: 0.9em;
         }
       }
+
+      /* Fixed Banner Styles */
+      .banner-content {
+        padding: 0 2rem;
+        font-weight: 500;
+        font-size: 1rem;
+        letter-spacing: 0.025em;
+        text-align: center;
+      }
     </style>
     <script
       type="text/javascript"
@@ -3996,6 +4005,24 @@
                 />
                 Google Play Store
               </a>
+
+              <a
+                href="https://apps.apple.com/de/app/bper-me/id6745517418"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="inline-flex items-center justify-center px-8 py-3 bg-black text-white rounded-lg hover:bg-gray-800 transition-colors duration-200 shadow-lg"
+              >
+                <svg
+                  class="w-6 h-6 mr-3 fill-white"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"
+                  />
+                </svg>
+                Apple Store
+              </a>
             </div>
           </div>
 
@@ -4235,6 +4262,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- Fixed Bottom Banner -->
+    <div
+      class="fixed bottom-0 left-0 right-0 bg-yellow-50 text-black py-3 z-50"
+    >
+      <div class="banner-content">
+        Bitte laden Sie nach dem Kauf die App bper.me aus dem Google Play Store
+        oder dem Apple App Store herunter, um vollständige Messergebnisse zu
+        erhalten.
+      </div>
+    </div>
 
     <script>
       // Globale Variable, um den Timer zu speichern
